# hl7parser-json

./: .gitignore  Makefile  README.md  hl7parser.sln  hl7parser.vcxproj  hl7parser.vcxproj.filters
hl7parser-cpp/: .gitignore
hl7parser-cpp/src/: HL7Base.hpp  HL7Header.hpp  HL7Message.hpp  HL7Observation.hpp  HL7Patient.hpp  HL7Util.hpp  Util.hpp
hl7parser-json/: .gitignore  CMakeLists.txt  hl7parser-json.vcxproj  hl7parser-json.vcxproj.filters  test.cpp
hl7parser-json/data/: adt_a08.ack  adt_a08.txt
hl7parser-json/include/: JsonHL7Parser.hpp  hl7parser-json.hpp
hl7parser-json/message/MDM/: MDM_T02.hpp
hl7parser-json/model/OBX/: Observation.hpp  ObservationIdentifier.hpp  ObservationResult.hpp
hl7parser-json/model/PID/: PatientAddress.hpp  PatientIdentification.hpp  PatientName.hpp  PhoneNumberHome.hpp
hl7parser-json/model/TXA/: TranscribedDocumentInformation.hpp  TranscriptionDocumentHeader.hpp
hl7parser-rxweb/src/: hl7parserrxweb_common.hpp
hl7parser-rxweb/test/: index.cpp  test.hpp
include/hl7parser/: alloc.h  message.h  seg_obx.h  settings.h
lib/: libhl7parser.so.2  libhl7parser.so.2.2.0
segment-generator/: README.md  hl7segdef.py  hl7segdef.xml
src/: Makefile  node.c  seg_obx.c  segdefs.c  settings.c  sprint.c
test/: Makefile
test/test_cbparser/: Makefile  test_cbparser.vcxproj  test_cbparser.vcxproj.filters
test/test_lexer/: Makefile  test_lexer.vcxproj  test_lexer.vcxproj.filters
test/test_parser/: Makefile  test_parser-next.c  test_parser.c  test_parser.vcxproj  test_parser.vcxproj.filters
test/test_segment/: Makefile  (+2 more)
(+7 files in other folders)
